mywork/force-app/main/default/objects/SSH_Keypair__c/SSH_Keypair__c.object-meta.xml
<CustomObject>
    <fullName>SSH_Keypair__c</fullName>
    <label>SSH Keypair</label>
    <nameField>
        <label>SSH Keypair Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSH Keypairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>