mywork/force-app/main/default/objects/SSH_Keypair__c/fields/Passphrase__c.field-meta.xml
<CustomField>
    <fullName>Passphrase__c</fullName>
    <description>A passphrase used to encrypt/decrypt SSH keys.</description>
    <inlineHelpText>A passphrase used to encrypt/decrypt SSH keys.</inlineHelpText>
    <label>Passphrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>