mywork/force-app/main/default/objects/SSH_Keypair__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <description>An encrypted SSH private key.</description>
    <inlineHelpText>An encrypted SSH private key.</inlineHelpText>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>