mywork/force-app/main/default/objects/SSH_Keypair__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <description>An encrypted SSH public key.</description>
    <inlineHelpText>An encrypted SSH public key.</inlineHelpText>
    <label>Public Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>